--- a/index.html
+++ b/index.html
@@ -1,102 +1,83 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Index — MasterTune Moto Suite</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <title>MasterTune Moto Suite</title>
+  <link rel="stylesheet" href="style.css">
+
 <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #0d1117;
-      color: #f0f6fc;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1.25rem 2rem;
-      background-color: #161b22;
-      border-bottom: 2px solid #1ce3e0;
-    }
-    header .left {
-      display: flex;
-      align-items: center;
-    }
-    header img {
-      height: 42px;
-      margin-right: 1rem;
-    }
-    h1 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin: 0;
-    }
-    .bike-selector {
-      font-size: 1rem;
-      background-color: #0d1117;
-      color: #1ce3e0;
-      border: 1px solid #1ce3e0;
-      padding: 0.5rem;
-      border-radius: 6px;
-    }
-    .container {
-      padding: 2rem;
-    }
-    .category {
-      margin-bottom: 2.5rem;
-    }
-    .category h2 {
-      color: #58f6f1;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-      gap: 1.25rem;
-    }
-    .tool-box {
-      background-color: #161b22;
-      border: 1px solid #30363d;
-      padding: 1.25rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-      text-decoration: none;
-      color: #f0f6fc;
-    }
-    .tool-box:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
-      background-color: #21262d;
-    }
-    .tool-box span {
-      display: block;
-      font-size: 1rem;
-      font-weight: 500;
-    }
-  </style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f9fbfc;
+    margin: 0;
+    padding: 0;
+    color: #222;
+  }
+  header {
+    background-color: #1a1a1a;
+    color: #fff;
+    padding: 1rem;
+    text-align: center;
+  }
+  h1 {
+    margin: 0;
+    font-size: 1.8rem;
+  }
+  .tool-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1rem;
+    padding: 2rem;
+  }
+  .tool-box {
+    background-color: #ffffff;
+    border-radius: 12px;
+    padding: 1.5rem;
+    text-align: center;
+    text-decoration: none;
+    color: #222;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease;
+    border: 1px solid #e0e0e0;
+  }
+  .tool-box:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 14px rgba(0,0,0,0.15);
+  }
+  .tool-box span {
+    font-size: 1.1rem;
+    display: inline-block;
+    margin-top: 0.25rem;
+  }
+</style>
+
 </head>
 <body>
-<header>
-<div class="left">
-<img alt="MasterTune Logo" src="logo.png"/>
-<h1>Index</h1>
-</div>
-<div>
-<select class="bike-selector">
-<option>PW50</option>
-<option disabled="">Cobra (coming soon)</option>
-<option disabled="">CRF50 (coming soon)</option>
-<option disabled="">KTM Mini (coming soon)</option>
-</select>
-</div>
+  <header><h1>MasterTune Moto Suite</h1>
+<img src="images/mastertune-logo.png" alt="MasterTune Logo" style="max-height: 60px; margin-top: 10px;">
 </header>
-<div class="container">
-<div class="category"><h2>Calculators</h2><div class="grid"><a class="tool-box" href="Calculators/Fuel%20Mix%20ratio%20calculator.html"><span>Fuel Mix Ratio Calculator</span></a><a class="tool-box" href="Calculators/PW50%20CDI%20Timing%20Tool.html"><span>Pw50 Cdi Timing Tool</span></a><a class="tool-box" href="Calculators/PW50%20compression_checker_tool.html"><span>Pw50 Compression Checker Tool</span></a><a class="tool-box" href="Calculators/PW50%20port_timing_visualizer.html"><span>Pw50 Port Timing Visualizer</span></a><a class="tool-box" href="Calculators/PW50%20vin_decoder.html"><span>Pw50 Vin Decoder</span></a><a class="tool-box" href="Calculators/pw50_jet%20calculator.html"><span>Pw50 Jet Calculator</span></a><a class="tool-box" href="Calculators/pw50_oil_pump%20Setup_tool_.html"><span>Pw50 Oil Pump Setup Tool </span></a><a class="tool-box" href="Calculators/pw50_ring_gap_calculator_.html"><span>Pw50 Ring Gap Calculator </span></a><a class="tool-box" href="Calculators/pw_50_gear%20ratio%20calculator.html"><span>Pw 50 Gear Ratio Calculator</span></a></div></div><div class="category"><h2>Checklist Tools</h2><div class="grid"><a class="tool-box" href="Checklist%20Tools/pw50%20build_reality_check.html"><span>Pw50 Build Reality Check</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20pre_race_checklist.html"><span>Pw50 Pre Race Checklist</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20race_day_flow_checklist.html"><span>Pw50 Race Day Flow Checklist</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20tool_scout_with_checkboxes%20(1).html"><span>Pw50 Tool Scout With Checkboxes (1)</span></a><a class="tool-box" href="Checklist%20Tools/pw50_between_motos_checklist_tool_orange_title.html"><span>Pw50 Between Motos Checklist Tool Orange Title</span></a><a class="tool-box" href="Checklist%20Tools/pw50_routine_maintenance_tool_with_final_exports.html"><span>Pw50 Routine Maintenance Tool With Final Exports</span></a></div></div><div class="category"><h2>Trackers</h2><div class="grid"><a class="tool-box" href="Trackers/pw50%20break_in_tracker_tool.html"><span>Pw50 Break In Tracker Tool</span></a><a class="tool-box" href="Trackers/pw50%20engine_rebuild_torque_tool.html"><span>Pw50 Engine Rebuild Torque Tool</span></a><a class="tool-box" href="Trackers/pw50%20rider_coaching_tools.html"><span>Pw50 Rider Coaching Tools</span></a><a class="tool-box" href="Trackers/pw50_51_point_inspection_checkered_flag.html"><span>Pw50 51 Point Inspection Checkered Flag</span></a><a class="tool-box" href="Trackers/pw50_teardown_tracker_expanded.html"><span>Pw50 Teardown Tracker Expanded</span></a></div></div>
-</div>
+  <main><div class="tool-grid"><a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html"><span>🛠️ PW50 Piston Clearance And Ring Gap Calculator</span></a>
+<a class="tool-box" href="pw50_51_point_inspection_FINAL_SHEET_FOR_APP.html"><span>🛠️ PW50 51 Point Inspection Sheet</span></a>
+<a class="tool-box" href="pw50_bearing_selector_upgrade_guide_FINAL_FOR_APP.html"><span>🛠️ PW50 Bearing Selector Upgrade Guide</span></a>
+<a class="tool-box" href="pw50_between_motos_checklist.html"><span>🛠️ PW50 Between Motos Checklist</span></a>
+<a class="tool-box" href="pw50_blueprint_log_FINAL_FOR_APP.html"><span>🛠️ PW50 Blueprint Log</span></a>
+<a class="tool-box" href="pw50_break_in_tracker_FINAL_FOR_APP.html"><span>🛠️ PW50 Break In Tracker</span></a>
+<a class="tool-box" href="pw50_cdi_timing_tool_FINAL_FIXED_STROKE.html"><span>🛠️ PW50 Cdi Timing Calculator</span></a>
+<a class="tool-box" href="pw50_coaching_tracker.html"><span>🛠️ PW50 Coaching Tracker</span></a>
+<a class="tool-box" href="pw50_compression_analyzer.html"><span>🛠️ PW50 Compression Analyzer</span></a>
+<a class="tool-box" href="pw50_fuel_mix_calculator.html"><span>🛠️ PW50 Fuel Mix Calculator</span></a>
+<a class="tool-box" href="pw50_gear_ratio_calculator_FINAL_FOR_APP.html"><span>🛠️ PW50 Gear Ratio Calculator</span></a>
+<a class="tool-box" href="pw50_jet_calculator.html"><span>🛠️ PW50 Jet Calculator</span></a>
+<a class="tool-box" href="pw50_oil_pump_setup_tool_FINAL_FOR_APP.html"><span>🛠️ PW50 Oil Pump Setup Tool</span></a>
+<a class="tool-box" href="pw50_port_timing_visualizer_FINAL_FOR_APP.html"><span>🛠️ PW50 Port Timing Visualizer</span></a>
+<a class="tool-box" href="pw50_pre_race_checklist_FINAL_WRAPPED.html"><span>🛠️ PW50 Pre Race Checklist</span></a>
+<a class="tool-box" href="pw50_race_day_flow_checklist_FINAL_FIXED_DISPLAY.html"><span>🛠️ PW50 Race Day Flow Checklist</span></a>
+<a class="tool-box" href="pw50_reality_check_FINAL_CLEANED.html"><span>🛠️ PW50 Reality Check</span></a>
+<a class="tool-box" href="pw50_routine_maintenance_tool.html"><span>🛠️ PW50 Routine Maintenance Tool</span></a>
+<a class="tool-box" href="pw50_teardown_tracker_.html"><span>🛠️ PW50 Teardown Tracker </span></a>
+<a class="tool-box" href="pw50_tool_scout_FINAL_WRAPPED.html"><span>🛠️ PW50 Tool Scout</span></a>
+<a class="tool-box" href="pw50_torque_tool.html"><span>🛠️ PW50 Torque Tool</span></a>
+<a class="tool-box" href="pw50_vin_decoder.html"><span>🛠️ PW50 Vin Decoder</span></a>
+</div></main>
 </body>
 </html>
