--- a/pw50_gear_ratio_calculator_FINAL_FOR_APP.html
+++ b/pw50_gear_ratio_calculator_FINAL_FOR_APP.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Cdi Timing Calculator — MasterTune Moto Suite</title>
+<title>PW50 Gear Ratio Calculator — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -45,7 +45,7 @@
     }
     .tool-container {
       padding: 2rem;
-      max-width: 900px;
+      max-width: 640px;
       margin: 0 auto;
     }
     footer {
@@ -77,7 +77,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Cdi Timing Calculator</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -89,99 +89,94 @@
 </div>
 </header>
 <div class="tool-container">
-<!DOCTYPE html>
-
 <html lang="en">
-<head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>PW50 CDI Timing Calculator — MasterTune</title>
+<title>PW50 Gear Ratio Calculator</title>
 <style>
     body {
       background-color: #0B0B0B;
       color: #FAFAFA;
       font-family: 'Inter', sans-serif;
-      margin: 0;
       padding: 2rem;
     }
     h1 {
       color: #30e1d3;
-      font-size: 2rem;
-      margin-bottom: 1rem;
+      font-family: 'Bebas Neue', sans-serif;
     }
-    label {
-      margin-top: 1rem;
+    select, input {
       display: block;
-      font-weight: bold;
-    }
-    input, select, button {
-      margin-top: 0.5rem;
-      padding: 0.5rem;
+      margin-top: 1rem;
+      width: 100%;
       background-color: #1F1F1F;
       color: #FAFAFA;
-      border: 1px solid #333;
-      width: 100%;
-      box-sizing: border-box;
+      border: none;
+      padding: 0.5rem;
       font-size: 1rem;
     }
     button {
+      margin-top: 1rem;
       background-color: #30e1d3;
+      color: white;
+      padding: 0.75rem;
+      border: none;
+      width: 100%;
       font-weight: bold;
-      margin-top: 1.5rem;
       cursor: pointer;
     }
     .result {
-      margin-top: 1.5rem;
-      padding: 1rem;
-      border-left: 4px solid #30e1d3;
       background-color: #1F1F1F;
-    }
-    .notes {
-      font-size: 0.9rem;
-      margin-top: 2rem;
-      color: #CCCCCC;
+      padding: 1rem;
+      margin-top: 1rem;
+      border-left: 4px solid #30e1d3;
     }
   </style>
-</head>
-<body>
-<h1>🧭 PW50 CDI Timing Calculator</h1>
-<p>Convert your dial gauge reading in millimeters into degrees BTDC. Useful for timing aftermarket CDI stators by measuring piston position before Top Dead Center (TDC).</p>
-<label for="stroke">Crankshaft Stroke (mm)</label>
-<select id="stroke">
-<option value="39.2">39.2mm (Stock)</option>
-<option value="45">45mm (Stroker)</option>
+<h1>🏁 PW50 Gear Ratio Calculator</h1>
+<p>
+    This tool shows engine RPM at a <strong>simulated 50 MPH</strong> to help preview whether you’re spinning the motor too fast. It’s not your actual speed — just a reference point to spot risky setups.
+  </p>
+<p>
+    🔧 <strong>PW50 Safe RPM Zones</strong><br/>
+    Even if you never hit 50MPH, this lets you see if you're over-spinning your motor. This tool simulates RPM at speed to find danger zones:
+    <ul>
+<li>Stock PW50: 7,500–8,200 RPM (⚠️ Danger: 9,000+)</li>
+<li>Rev Plate / Light Porting: 8,500–9,500 RPM (⚠️ Danger: 10,000+)</li>
+<li>60cc Kit: 7,000–8,000 RPM (⚠️ Danger: 8,500+)</li>
+<li>Moped-Style Mod: 9,500–11,000+ RPM (⚠️ Danger: 12,000+)</li>
+</ul>
+</p>
+<select id="primary">
+<option value="33">Primary Gear: Stock 33T</option>
+<option value="32">Primary Gear: Solid State 32T</option>
 </select>
-<label for="flywheel">Flywheel Circumference (mm)</label>
-<input id="flywheel" type="number" value="377"/>
-<label for="timingMM">Distance Before TDC (mm)</label>
-<input id="timingMM" placeholder="e.g. 1.5" type="number"/>
-<button onclick="calculateDegrees()">🔧 Convert to Degrees</button>
+<select id="rear">
+<option value="11">PW50 Rear Drive Gear: 11T</option>
+<option value="10">QT50 Rear Drive Gear: 10T</option>
+</select>
+<input id="speed" step="1" type="number" value="50"/>
+<button onclick="calculateRPM()">⚙️ Calculate RPM</button>
 <div class="result" id="result" style="display:none;"></div>
-<div class="notes">
-<p><strong>Note:</strong> This gives a great starting point, but ignition timing should always be tested and adjusted based on real-world performance. Final adjustment is best done with the stator case off while observing spark timing and throttle response.</p>
-<p>This calculator assumes a general flywheel size of 377mm (PW50 CDI flywheel). If you're using a different flywheel, update the value above.</p>
-</div>
 <script>
-    function calculateDegrees() {
-      const stroke = parseFloat(document.getElementById('stroke').value);
-      const flywheel = parseFloat(document.getElementById('flywheel').value);
-      const timingMM = parseFloat(document.getElementById('timingMM').value);
-      if (isNaN(timingMM) || timingMM <= 0) {
-        alert('Please enter a valid mm value.');
-        return;
-      }
+    function calculateRPM() {
+      const primary = parseFloat(document.getElementById("primary").value);
+      const rear = parseFloat(document.getElementById("rear").value);
+      const speed = parseFloat(document.getElementById("speed").value);
 
-      const mmPerDegree = flywheel / 360;
-      const degrees = timingMM / mmPerDegree;
-      
-      const resultBox = document.getElementById('result');
-      resultBox.innerHTML = `<strong>Degrees Before TDC:</strong> ${degrees.toFixed(2)}°`;
-      resultBox.style.display = 'block';
+      const internalRatio = 7.67;
+      const tireDiameter = 15.3;
+      const finalDriveRatio = internalRatio * (rear / primary);
+
+      const engineRPM = (speed * 1056 * finalDriveRatio) / tireDiameter;
+
+      const resultBox = document.getElementById("result");
+      resultBox.innerHTML = `
+        <strong>Engine RPM @ ${speed} MPH:</strong> ${Math.round(engineRPM).toLocaleString()} RPM<br>
+        <br><em>Note:</em> Compare to safe RPM zones above. This is for reference only.
+      `;
+      resultBox.style.display = "block";
     }
   </script>
-</body>
-</html>
-</div>
+</html></div>
 <footer>
     Brought to you by Factory51 · MasterTune Moto Suite © 2025
   </footer>
