--- a/pw50_reality_check_FINAL_CLEANED.html
+++ b/pw50_reality_check_FINAL_CLEANED.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Reality Check — MasterTune Moto Suite</title>
+<title>PW50 Build Reality Check — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -74,7 +74,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Reality Check</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
