--- a/pw50_bearing_selector_upgrade_guide_FINAL_FOR_APP.html
+++ b/pw50_bearing_selector_upgrade_guide_FINAL_FOR_APP.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Bearing Selector Upgrade Guide — MasterTune Moto Suite</title>
+<title>PW50 Bearing Selector &amp; Upgrade Guide — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -84,7 +84,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Bearing Selector Upgrade Guide</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
