--- a/pw50_oil_pump_setup_tool_FINAL_FOR_APP.html
+++ b/pw50_oil_pump_setup_tool_FINAL_FOR_APP.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Oil Pump Setup Tool — MasterTune Moto Suite</title>
+<title>PW50 Oil Pump Setup Tool — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -77,7 +77,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Oil Pump Setup Tool</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -155,7 +155,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Oil Pump Setup Tool</h1>
+<h1>🛢️ PW50 Oil Pump Setup Tool</h1>
 <div class="tip" style="margin-bottom: 2rem;">
 <strong>📏 How to Measure Your Oil Pump Stroke:</strong><br/><br/>
     1. 🔓 Open the throttle fully — use a small zip tie to hold it wide open.<br/>
