--- a/pw50_piston_ring_calculator_FINAL_WRAPPED_FIXED_COLOR.html
+++ b/pw50_piston_ring_calculator_FINAL_WRAPPED_FIXED_COLOR.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Piston Clearance And Ring Gap Calculator — MasterTune Moto Suite</title>
+<title>PW50 Piston Clearance and Ring Gap Calculator — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -87,7 +87,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Piston Clearance And Ring Gap Calculator</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -153,7 +153,7 @@
   </style>
 </head>
 <body>
-<h1>🧪 Piston Clearance &amp; Ring Gap Calculator</h1>
+<h1>🧪 PW50 Piston &amp; Ring Calculator</h1>
 <div class="tip">
     Enter your piston diameter to calculate your ideal <strong>ring end gap</strong> using Gordon Jennings’ tuning rule: 0.004" per inch of piston diameter. Applies to cast rings on a steel bore.
   </div>
