--- a/pw50_pre_race_checklist_FINAL_WRAPPED.html
+++ b/pw50_pre_race_checklist_FINAL_WRAPPED.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Pre Race Checklist — MasterTune Moto Suite</title>
+<title>PW50 Pre-Race Checklist — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -77,7 +77,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Pre Race Checklist</h1>
+<h1>MasterTune Moto Suite</h1>
 </div>
 <div>
 <select class="bike-selector">
