--- a/index.html
+++ b/index.html
@@ -1,83 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MasterTune Moto Suite</title>
-  <link rel="stylesheet" href="style.css">
-
-<style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f9fbfc;
-    margin: 0;
-    padding: 0;
-    color: #222;
-  }
-  header {
-    background-color: #1a1a1a;
-    color: #fff;
-    padding: 1rem;
-    text-align: center;
-  }
-  h1 {
-    margin: 0;
-    font-size: 1.8rem;
-  }
-  .tool-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 1rem;
-    padding: 2rem;
-  }
-  .tool-box {
-    background-color: #ffffff;
-    border-radius: 12px;
-    padding: 1.5rem;
-    text-align: center;
-    text-decoration: none;
-    color: #222;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    transition: transform 0.2s ease;
-    border: 1px solid #e0e0e0;
-  }
-  .tool-box:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 14px rgba(0,0,0,0.15);
-  }
-  .tool-box span {
-    font-size: 1.1rem;
-    display: inline-block;
-    margin-top: 0.25rem;
-  }
-</style>
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #0d1117;
+      color: #f0f6fc;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.25rem 2rem;
+      background-color: #161b22;
+      border-bottom: 2px solid #1ce3e0;
+    }
+    .left {
+      display: flex;
+      align-items: center;
+    }
+    header img {
+      height: 42px;
+      margin-right: 1rem;
+    }
+    h1 {
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin: 0;
+    }
+    .bike-selector {
+      font-size: 1rem;
+      background-color: #0d1117;
+      color: #1ce3e0;
+      border: 1px solid #1ce3e0;
+      padding: 0.5rem;
+      border-radius: 6px;
+    }
+    .container {
+      padding: 2rem;
+    }
+    .category {
+      margin-bottom: 2.5rem;
+    }
+    .category h2 {
+      color: #58f6f1;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 1.25rem;
+    }
+    .tool-box {
+      display: block;
+      background-color: #161b22;
+      border: 1px solid #30363d;
+      padding: 1.25rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      text-align: center;
+      transition: 0.3s;
+      color: #1ce3e0;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      user-select: none;
+    }
+    .tool-box:hover {
+      border-color: #1ce3e0;
+      background-color: #1a1f28;
+    }
+  </style>
 </head>
 <body>
-  <header><h1>MasterTune Moto Suite</h1>
-<img src="images/mastertune-logo.png" alt="MasterTune Logo" style="max-height: 60px; margin-top: 10px;">
-</header>
-  <main><div class="tool-grid"><a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html"><span>🛠️ PW50 Piston Clearance And Ring Gap Calculator</span></a>
-<a class="tool-box" href="pw50_51_point_inspection_FINAL_SHEET_FOR_APP.html"><span>🛠️ PW50 51 Point Inspection Sheet</span></a>
-<a class="tool-box" href="pw50_bearing_selector_upgrade_guide_FINAL_FOR_APP.html"><span>🛠️ PW50 Bearing Selector Upgrade Guide</span></a>
-<a class="tool-box" href="pw50_between_motos_checklist.html"><span>🛠️ PW50 Between Motos Checklist</span></a>
-<a class="tool-box" href="pw50_blueprint_log_FINAL_FOR_APP.html"><span>🛠️ PW50 Blueprint Log</span></a>
-<a class="tool-box" href="pw50_break_in_tracker_FINAL_FOR_APP.html"><span>🛠️ PW50 Break In Tracker</span></a>
-<a class="tool-box" href="pw50_cdi_timing_tool_FINAL_FIXED_STROKE.html"><span>🛠️ PW50 Cdi Timing Calculator</span></a>
-<a class="tool-box" href="pw50_coaching_tracker.html"><span>🛠️ PW50 Coaching Tracker</span></a>
-<a class="tool-box" href="pw50_compression_analyzer.html"><span>🛠️ PW50 Compression Analyzer</span></a>
-<a class="tool-box" href="pw50_fuel_mix_calculator.html"><span>🛠️ PW50 Fuel Mix Calculator</span></a>
-<a class="tool-box" href="pw50_gear_ratio_calculator_FINAL_FOR_APP.html"><span>🛠️ PW50 Gear Ratio Calculator</span></a>
-<a class="tool-box" href="pw50_jet_calculator.html"><span>🛠️ PW50 Jet Calculator</span></a>
-<a class="tool-box" href="pw50_oil_pump_setup_tool_FINAL_FOR_APP.html"><span>🛠️ PW50 Oil Pump Setup Tool</span></a>
-<a class="tool-box" href="pw50_port_timing_visualizer_FINAL_FOR_APP.html"><span>🛠️ PW50 Port Timing Visualizer</span></a>
-<a class="tool-box" href="pw50_pre_race_checklist_FINAL_WRAPPED.html"><span>🛠️ PW50 Pre Race Checklist</span></a>
-<a class="tool-box" href="pw50_race_day_flow_checklist_FINAL_FIXED_DISPLAY.html"><span>🛠️ PW50 Race Day Flow Checklist</span></a>
-<a class="tool-box" href="pw50_reality_check_FINAL_CLEANED.html"><span>🛠️ PW50 Reality Check</span></a>
-<a class="tool-box" href="pw50_routine_maintenance_tool.html"><span>🛠️ PW50 Routine Maintenance Tool</span></a>
-<a class="tool-box" href="pw50_teardown_tracker_.html"><span>🛠️ PW50 Teardown Tracker </span></a>
-<a class="tool-box" href="pw50_tool_scout_FINAL_WRAPPED.html"><span>🛠️ PW50 Tool Scout</span></a>
-<a class="tool-box" href="pw50_torque_tool.html"><span>🛠️ PW50 Torque Tool</span></a>
-<a class="tool-box" href="pw50_vin_decoder.html"><span>🛠️ PW50 Vin Decoder</span></a>
-</div></main>
+  <header>
+    <div class="left">
+      <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
+      <h1>MasterTune Moto Suite</h1>
+    </div>
+    <select class="bike-selector">
+      <option value="pw50" selected>PW50</option>
+      <option value="crf50" disabled>CRF50 (coming soon)</option>
+      <option value="cobra" disabled>Cobra (coming soon)</option>
+    </select>
+  </header>
+
+  <div class="container">
+
+    <div class="category">
+      <h2>Calculators & Visualizers</h2>
+      <div class="grid">
+        <a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html">Piston Clearance & Ring Gap Calculator</a>
+        <a class="tool-box" href="pw50_cdi_timing_calculator.html">CDI Timing Tool</a>
+        <a class="tool-box" href="pw50_compression_analyzer.html">Compression Checker</a>
+        <a class="tool-box" href="pw50_fuel_mix_calculator.html">Fuel Mix Ratio Calculator</a>
+        <a class="tool-box" href="pw50_gear_ratio_calculator.html">Gear Ratio Calculator</a>
+        <a class="tool-box" href="pw50_jet_calculator.html">Jetting Calculator</a>
+        <a class="tool-box" href="pw50_port_timing_visualizer.html">Port Timing Visualizer</a>
+      </div>
+    </div>
+
+    <div class="category">
+      <h2>Maintenance & Prep Tools</h2>
+      <div class="grid">
+        <a class="tool-box" href="pw50_between_motos_checklist.html">Between Motos Checklist</a>
+        <a class="tool-box" href="pw50_break_in_tracker.html">Break-In Tracker</a>
+        <a class="tool-box" href="pw50_oil_pump_setup_tool.html">Oil Pump Setup Tool</a>
+        <a class="tool-box" href="pw50_pre_race_checklist.html">Pre-Race Checklist</a>
+        <a class="tool-box" href="pw50_race_day_flow_checklist.html">Race-Day Flow Checklist</a>
+        <a class="tool-box" href="pw50_routine_maintenance_tool.html">Routine Maintenance Tracker</a>
+        <a class="tool-box" href="pw50_teardown_tracker.html">Teardown Tracker</a>
+        <a class="tool-box" href="pw50_tool_scout.html">Tool Scout Checklist</a>
+        <a class="tool-box" href="pw50_torque_tool.html">Torque Spec Tool</a>
+      </div>
+    </div>
+
+    <div class="category">
+      <h2>Diagnostics & Setup Logs</h2>
+      <div class="grid">
+        <a class="tool-box" href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a>
+        <a class="tool-box" href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector & Upgrade Guide</a>
+        <a class="tool-box" href="pw50_blueprint_log.html">Blueprint Log</a>
+        <a class="tool-box" href="pw50_coaching_tracker.html">Rider Coaching Tracker</a>
+        <a class="tool-box" href="pw50_reality_check.html">Build Reality Check</a>
+        <a class="tool-box" href="pw50_vin_decoder.html">VIN Decoder</a>
+      </div>
+    </div>
+
+  </div>
 </body>
 </html>
