--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -139,9 +139,7 @@
     </div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function calculateRing() {
@@ -189,5 +187,12 @@
       if (boreResult) boreResult.textContent = bore + " mm";
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
