--- a/pw50_between_motos_checklist.html
+++ b/pw50_between_motos_checklist.html
@@ -172,9 +172,7 @@
     </div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function copyLog() {
@@ -189,5 +187,12 @@
       alert('Checklist copied to clipboard!');
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
