--- a/pw50_compression_analyzer.html
+++ b/pw50_compression_analyzer.html
@@ -119,9 +119,7 @@
     <div class="result" id="result" style="display:none;"></div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function checkCompression() {
@@ -150,5 +148,12 @@
       result.style.display = "block";
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
