--- a/pw50_port_timing_visualizer.html
+++ b/pw50_port_timing_visualizer.html
@@ -123,9 +123,7 @@
     <div class="result" id="blowdownResult" style="display: none;"></div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function drawMap() {
@@ -165,5 +163,12 @@
       blowEl.style.display = "block";
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
