--- a/pw50_routine_maintenance_tool.html
+++ b/pw50_routine_maintenance_tool.html
@@ -115,9 +115,7 @@
 <button onclick="exportLog()">📋 Copy Maintenance Log</button>
 <button onclick="window.print()">🖨️ Print Maintenance Log</button>
 </div>
-<footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+
 <script>
     const data = {
       'Before Every Ride': [
@@ -227,5 +225,12 @@
 
     createChecklist();
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
