--- a/pw50_torque_tool_fixed.html
+++ b/pw50_torque_tool_fixed.html
@@ -197,9 +197,7 @@
   </div>
 </div>
 
-<footer>
-  Brought to you by Factory51 · MasterTune Moto Suite © 2025
-</footer>
+
 
 <script>
   function searchSpecs() {
@@ -227,6 +225,13 @@
       document.getElementById("results").innerHTML = "<p style='color: #30e1d3; text-align: center;'>⚠️ No matching torque specs found.</p>";
     }
   }
+</script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
 </script>
 </body>
 </html>
