--- a/pw50_vin_decoder_cleaned.html
+++ b/pw50_vin_decoder_cleaned.html
@@ -144,9 +144,7 @@
   </div>
 </div>
 
-<footer>
-  Brought to you by Factory51 · MasterTune Moto Suite © 2025
-</footer>
+
 
 <script>
   const vinMap = {
@@ -186,6 +184,13 @@
   function saveData() {
     alert("Save to device function placeholder");
   }
+</script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
 </script>
 </body>
 </html>
