--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -109,8 +109,13 @@
     CONTENT TRUNCATED FOR DISPLAY — REMAINS UNCHANGED FROM VALIDATED FILE
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
