--- a/pw50_bearing_selector_upgrade_guide.html
+++ b/pw50_bearing_selector_upgrade_guide.html
@@ -158,9 +158,7 @@
     </div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function showSection() {
@@ -173,5 +171,12 @@
       }
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
