--- a/pw50_blueprint_log.html
+++ b/pw50_blueprint_log.html
@@ -149,8 +149,13 @@
     <button onclick="alert('Log generated. Export functionality coming soon.')">📄 GENERATE LOG</button>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
