--- a/pw50_cdi_timing_calculator.html
+++ b/pw50_cdi_timing_calculator.html
@@ -139,9 +139,7 @@
     </div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function calculateDegrees() {
@@ -161,5 +159,12 @@
       resultBox.style.display = 'block';
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
