--- a/pw50_fuel_mix_calculator.html
+++ b/pw50_fuel_mix_calculator.html
@@ -135,9 +135,7 @@
     </div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function getRatio() {
@@ -154,5 +152,12 @@
         "Recommended Fuel-to-Oil Ratio: <strong>" + ratio + "</strong>";
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
