--- a/pw50_gear_ratio_calculator.html
+++ b/pw50_gear_ratio_calculator.html
@@ -130,9 +130,7 @@
     <div class="result" id="result" style="display:none;"></div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     function calculateRPM() {
@@ -154,5 +152,12 @@
       resultBox.style.display = "block";
     }
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
