--- a/pw50_jet_calculator.html
+++ b/pw50_jet_calculator.html
@@ -175,9 +175,7 @@
     <div class="result" id="result" style="display: none;"></div>
   </div>
 
-  <footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+  
 
   <script>
     document.getElementById("calculateBtn").addEventListener("click", function() {
@@ -231,5 +229,12 @@
       result.style.display = 'block';
     });
   </script>
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
