--- a/pw50_pre_race_checklist.html
+++ b/pw50_pre_race_checklist.html
@@ -137,8 +137,13 @@
 <h2>🏁 Bottom Line</h2>
 <p>The pros prep. The amateurs guess. Set the system. Run the checklist. Win the day. Everything else is just chaos.</p>
 </div>
-<footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
