--- a/pw50_tool_scout.html
+++ b/pw50_tool_scout.html
@@ -121,8 +121,13 @@
 <label><input type="checkbox"/> Pit crew calm and focused</label>
 <button onclick="alert('Checklist complete. Good luck out there!')">✅ COMPLETE FLOW CHECK</button>
 </div>
-<footer>
-    Brought to you by Factory51 · MasterTune Moto Suite © 2025
-  </footer>
+
+
+<div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
 </body>
 </html>
