--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
       border-color: #1ce3e0;
       background-color: #1a1f28;
     }
-  </style>
+  
+  footer {
+    text-align: center;
+    padding: 1.5rem 0;
+    color: #999;
+    font-size: 0.875rem;
+  }
+</style>
 </head>
 <body>
   <header>
