updated header fix

--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -97,7 +97,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
-      <h1>Piston Clearance & Ring Gap Calculator</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -108,7 +108,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🧪 Piston Clearance & Ring Gap Calculator</h1>
+  <h2 class="tool-name">Piston Clearance & Ring Gap Calculator</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <div class="tip">
       Enter your piston diameter to calculate your ideal <strong>ring end gap</strong> using Gordon Jennings’ tuning rule: 0.004" per inch of piston diameter. Applies to cast rings on a steel bore.
     </div>
