--- a/pw50_bearing_selector_upgrade_guide.html
+++ b/pw50_bearing_selector_upgrade_guide.html
@@ -83,7 +83,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Bearing Selector Upgrade Guide</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -94,7 +94,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🏁 PW50 Bearing Selector & Upgrade Guide</h1>
+  <h2 class="tool-name">PW50 Bearing Selector Upgrade Guide</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <p>Choose the section of the bike to view bearing information.</p>
     <select id="sectionSelector" onchange="showSection()">
       <option value="">-- Select Section --</option>
