--- a/pw50_blueprint_log.html
+++ b/pw50_blueprint_log.html
@@ -95,7 +95,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Blueprint Log</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -106,7 +106,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>📘 PW50 Blueprint Log</h1>
+  <h2 class="tool-name">PW50 Blueprint Log</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <div class="tip">
       Record your precision engine specs here. Rear-to-front order. PW50-specific. Tuned by Factory51.
     </div>
