--- a/pw50_coaching_tracker.html
+++ b/pw50_coaching_tracker.html
@@ -97,7 +97,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Coaching Tracker</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -107,6 +107,7 @@
   </header>
 
   <div class="tool-container">
+  <h2 class="tool-name">PW50 Coaching Tracker</h2>
     <h2>PW50 Coaching Tracker</h2>
     <p>Use this coaching tool during practice or race day to log lap times, record visual/riding cues, and monitor rider performance. Saved data is stored in your browser and can be exported or visualized anytime.</p>
     <ul>
