--- a/pw50_jet_calculator.html
+++ b/pw50_jet_calculator.html
@@ -139,7 +139,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Jet Calculator</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -150,7 +150,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🧪 PW50 Jetting Calculator</h1>
+  <h2 class="tool-name">PW50 Jet Calculator</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <div class="tip">
       <strong>🏁 Factory51 Jetting Mode (Optional)</strong><br/>
       Use standard jets like <code>#65</code>, <code>#67.5</code>, <code>#70</code>, <code>#72.5</code> — or enable precision values like <code>#68.25</code> using Factory51 mode.
