--- a/pw50_oil_pump_setup_tool.html
+++ b/pw50_oil_pump_setup_tool.html
@@ -110,7 +110,7 @@
 <header>
   <div class="left">
     <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-    <h1>PW50 Oil Pump Setup Tool</h1>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
   </div>
   <select class="bike-selector">
     <option selected>PW50</option>
@@ -121,6 +121,7 @@
 </header>
 
 <div class="tool-container">
+  <h2 class="tool-name">PW50 Oil Pump Setup Tool</h2>
   <div class="tip">
     <strong>📏 How to Measure Your Oil Pump Stroke:</strong><br/><br/>
     1. 🔓 Open the throttle fully — use a small zip tie to hold it wide open.<br/>
