--- a/pw50_reality_check.html
+++ b/pw50_reality_check.html
@@ -74,7 +74,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-<h1>Pw50 Reality Check</h1>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -86,7 +86,8 @@
 </div>
 </header>
 <div class="tool-container">
-<h1>🧪 Build Reality Check</h1>
+  <h2 class="tool-name">Pw50 Reality Check</h2>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
 <p>Think you're ready for a full PW50 race build? Take this quick quiz and find out.</p>
 <div class="question">
 <label for="tools">Do you have the right tools (torque wrench, bearing press, piston stop)?</label>
