--- a/pw50_routine_maintenance_tool.html
+++ b/pw50_routine_maintenance_tool.html
@@ -98,7 +98,7 @@
 <header>
 <div class="left" style="display: flex; align-items: center;">
 <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-<h1>Pw50 Routine Maintenance Tool</h1>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -109,6 +109,7 @@
 </div>
 </header>
 <div class="tool-container">
+  <h2 class="tool-name">Pw50 Routine Maintenance Tool</h2>
 <h2>Pw50 Routine Maintenance Tool</h2>
 <p>Stay race-ready with daily, weekly, monthly, and seasonal checklists. Your data saves in-browser automatically.</p>
 <div id="checklists"></div>
