--- a/pw50_torque_tool_fixed.html
+++ b/pw50_torque_tool_fixed.html
@@ -121,7 +121,7 @@
 <header>
   <div class="left">
     <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-    <h1>PW50 Torque Tool</h1>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
   </div>
   <select class="bike-selector">
     <option>PW50</option>
@@ -132,6 +132,7 @@
 </header>
 
 <div class="tool-container">
+  <h2 class="tool-name">PW50 Torque Tool</h2>
   <p class="description">Essential torque specs for your PW50 engine rebuild. Grouped by assembly, with both Nm and ft·lb values.</p>
   <div class="search-bar">
     <input id="search" oninput="searchSpecs()" placeholder="Search for torque specs..." type="text"/>
