--- a/pw50_vin_decoder_cleaned.html
+++ b/pw50_vin_decoder_cleaned.html
@@ -117,7 +117,7 @@
 <header>
   <div class="left">
     <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-    <h1>PW50 VIN Decoder</h1>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
   </div>
   <select class="bike-selector">
     <option>PW50</option>
@@ -128,6 +128,7 @@
 </header>
 
 <div class="tool-container">
+  <h2 class="tool-name">PW50 VIN Decoder</h2>
   <p class="description">Enter the 10th digit of your PW50 VIN to find your model year and details.</p>
   <div class="input-block">
     <input id="vinDigit" maxlength="1" placeholder="Enter 10th digit (e.g. N)" type="text"/>
