--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -91,7 +91,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 51-Point Inspection Sheet</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -102,7 +102,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🏁 Factory51 PW50 51-Point Inspection Sheet</h1>
+  <h2 class="tool-name">PW50 51-Point Inspection Sheet</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <!-- Table is already validated and included in uploaded content -->
     <!-- Due to length, no changes are required in the core table logic -->
     <!-- For brevity, loading from saved content on file server or output viewer is recommended if needed -->
