--- a/pw50_between_motos_checklist.html
+++ b/pw50_between_motos_checklist.html
@@ -100,7 +100,7 @@
   <header>
     <div class="left" style="display: flex; align-items: center;">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Between Motos Checklist</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -110,6 +110,7 @@
   </header>
 
   <div class="tool-container">
+  <h2 class="tool-name">PW50 Between Motos Checklist</h2>
     <h2>PW50 Between Motos Checklist</h2>
     <p>This is your 20-minute refresh routine to keep the PW50 race-ready between motos or after heavy backyard thrashing. Don’t overthink it — just run down the list and trust the process.</p>
 
