--- a/pw50_break_in_tracker.html
+++ b/pw50_break_in_tracker.html
@@ -104,7 +104,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Break-In Tracker</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -115,7 +115,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>⏱️ PW50 Break-In Tracker</h1>
+  <h2 class="tool-name">PW50 Break-In Tracker</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <p><strong>🔥 Factory51 Break-In Protocol</strong><br/>
     Track your PW50 engine break-in process like a pro. This tool logs your sessions, throttle use, and notes while calculating total time — aiming for 2.0+ hours across multiple heat cycles.</p>
     <div class="result">
