--- a/pw50_cdi_timing_calculator.html
+++ b/pw50_cdi_timing_calculator.html
@@ -103,7 +103,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 CDI Timing Calculator</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -114,7 +114,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🧭 PW50 CDI Timing Calculator</h1>
+  <h2 class="tool-name">PW50 CDI Timing Calculator</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <p>Convert your dial gauge reading in millimeters into degrees BTDC. Useful for timing aftermarket CDI stators by measuring piston position before Top Dead Center (TDC).</p>
 
     <label for="stroke">Crankshaft Stroke (mm)</label>
