--- a/pw50_compression_analyzer.html
+++ b/pw50_compression_analyzer.html
@@ -93,7 +93,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Compression Analyzer</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -104,7 +104,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🔍 PW50 Compression Analyzer</h1>
+  <h2 class="tool-name">PW50 Compression Analyzer</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <p>Enter your compression test reading (PSI) below. Be sure to hold the throttle wide open and use a quality gauge for accuracy.</p>
 
     <label for="useType">Select Use Type</label>
