--- a/pw50_fuel_mix_calculator.html
+++ b/pw50_fuel_mix_calculator.html
@@ -104,7 +104,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Fuel Mix Calculator</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -115,6 +115,7 @@
   </header>
 
   <div class="tool-container">
+  <h2 class="tool-name">PW50 Fuel Mix Calculator</h2>
     <label for="fuelType">Fuel Type</label>
     <select id="fuelType">
       <option>Pump Gas</option>
