--- a/pw50_gear_ratio_calculator.html
+++ b/pw50_gear_ratio_calculator.html
@@ -89,7 +89,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1>PW50 Gear Ratio Calculator</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -100,7 +100,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>🏁 PW50 Gear Ratio Calculator</h1>
+  <h2 class="tool-name">PW50 Gear Ratio Calculator</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <p>This tool shows engine RPM at a <strong>simulated 50 MPH</strong> to help preview whether you’re spinning the motor too fast. It’s not your actual speed — just a reference point to spot risky setups.</p>
 
     <p><strong>🔧 PW50 Safe RPM Zones</strong></p>
