--- a/pw50_port_timing_visualizer.html
+++ b/pw50_port_timing_visualizer.html
@@ -100,7 +100,7 @@
   <header>
     <div class="left">
       <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-      <h1>PW50 Port Timing Visualizer</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <select class="bike-selector">
       <option selected>PW50</option>
@@ -111,7 +111,8 @@
   </header>
 
   <div class="tool-container">
-    <h1>📊 PW50 Port Timing Visualizer</h1>
+  <h2 class="tool-name">PW50 Port Timing Visualizer</h2>
+    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     <label for="ex">Exhaust Duration (degrees)</label>
     <input id="ex" placeholder="e.g. 175" step="1" type="number"/>
     <label for="trans">Transfer Duration (degrees)</label>
