--- a/pw50_teardown_tracker.html
+++ b/pw50_teardown_tracker.html
@@ -77,7 +77,7 @@
 <header>
 <div class="left">
 <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-<h1>Pw50 Teardown Tracker</h1>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -89,6 +89,7 @@
 </div>
 </header>
 <div class="tool-container">
+  <h2 class="tool-name">Pw50 Teardown Tracker</h2>
 
 
 <!--html lang="en">
@@ -159,7 +160,7 @@
   </style>
 -->
 <!--body>
-<h1>🧰 PW50 Teardown Tracker</h1>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
 <p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
 <div id="tracker"></div>
 <button onclick="exportAll()">📋 Export My Tracker Notes</button>
