--- a/pw50_teardown_tracker.html
+++ b/pw50_teardown_tracker.html
@@ -1,12 +1,11 @@
-
-
-<!--html lang="en">
-<!--head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Teardown Tracker — MasterTune Moto Suite</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PW50 Teardown Tracker — MasterTune Moto Suite</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -72,32 +71,32 @@
       background-color: #25c4b8 !important;
     }
   </style>
--->
-<!--body>
-<header>
-<div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-<h1><a href="index.html">MasterTune Moto Suite</a></h1>
-</div>
-<div>
-<select class="bike-selector">
-<option>PW50</option>
-<option disabled="">Cobra (coming soon)</option>
-<option disabled="">CRF50 (coming soon)</option>
-<option disabled="">KTM Mini (coming soon)</option>
-</select>
-</div>
-</header>
-<div class="tool-container">
-  <h2 class="tool-name">Pw50 Teardown Tracker</h2>
+</head>
+<body>
+  <header>
+    <div class="left">
+      <img src="../logo.png" alt="MasterTune Logo" />
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
+    </div>
+    <div>
+      <select class="bike-selector">
+        <option>PW50</option>
+        <option disabled>Cobra (coming soon)</option>
+        <option disabled>CRF50 (coming soon)</option>
+        <option disabled>KTM Mini (coming soon)</option>
+      </select>
+    </div>
+  </header>
 
-
-<!--html lang="en">
-<!--head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>PW50 Teardown Tracker — Factory51 MasterTune</title>
-<style>
+  <div class="tool-container">
+    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PW50 Teardown Tracker — Factory51 MasterTune</title>
+  <style>
     body {
       background-color: #0B0B0B;
       color: #FAFAFA;
@@ -158,13 +157,16 @@
       margin-top: 1rem;
     }
   </style>
--->
-<!--body>
-<h1><a href="index.html">MasterTune Moto Suite</a></h1>
-<p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
-<div id="tracker"></div>
-<button onclick="exportAll()">📋 Export My Tracker Notes</button>
-<script>
+</head>
+<body>
+  <h1>🧰 PW50 Teardown Tracker</h1>
+  <p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
+
+  <div id="tracker"></div>
+
+  <button onclick="exportAll()">📋 Export My Tracker Notes</button>
+
+  <script>
     const data = {
       '🧼 Initial Prep & Fluids': [
         'Wash and degrease the bike',
@@ -270,9 +272,16 @@
 
     createTracker();
   </script>
--->
--->
-</div>
+</body>
+</html>
 
--->
--->
+  </div>
+
+  <div id="footer-container"></div>
+<script>
+  fetch('footer.html')
+    .then(r => r.text())
+    .then(t => document.getElementById('footer-container').innerHTML = t);
+</script>
+</body>
+</html>
