teardown tracker fix 2

--- a/pw50_teardown_tracker.html
+++ b/pw50_teardown_tracker.html
@@ -75,8 +75,8 @@
 <body>
   <header>
     <div class="left">
-      <img src="../logo.png" alt="MasterTune Logo" />
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
+      <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
+      <h1>MasterTune Moto Suite</h1>
     </div>
     <div>
       <select class="bike-selector">
