--- a/pw50_teardown_tracker.html
+++ b/pw50_teardown_tracker.html
@@ -6,6 +6,7 @@
   <title>PW50 Teardown Tracker — MasterTune Moto Suite</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -76,7 +77,7 @@
   <header>
     <div class="left">
       <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
-      <h1>MasterTune Moto Suite</h1>
+      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
     </div>
     <div>
       <select class="bike-selector">
