batch fix header style

--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -6,6 +6,7 @@
   <title>Piston Clearance & Ring Gap Calculator — MasterTune Moto Suite</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
+header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
