--- a/pw50_coaching_tracker.html
+++ b/pw50_coaching_tracker.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
