--- a/pw50_race_day_flow_checklist.html
+++ b/pw50_race_day_flow_checklist.html
@@ -7,6 +7,7 @@
 <title>Pw50 Race Day Flow Checklist — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
+header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
