--- a/pw50_reality_check.html
+++ b/pw50_reality_check.html
@@ -6,6 +6,7 @@
 <title>Pw50 Reality Check — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
+header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
